# hl_event_server

./: CMakeLists.txt  README.md  main.cpp  start.sh  start_writer.sh  test.cpp  writer_main.cpp
config/: config.cpp  config.h
database/: author.cpp  author.h  cache.cpp  cache.h  database.cpp
docker/: docker-compose.yml
web_server/: config.cpp  http_request_factory.h  http_web_server.h
web_server/handlers/: author_handler.h  web_page_handler.h
